// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentCard Should match existing snapshot when given default props. 1`] = `
<Card
  centered={true}
  className="bioblocks-component-card"
  style={
    Object {
      "height": "570px",
      "maxWidth": "unset",
      "width": "525px",
    }
  }
>
  <ComponentMenuBar
    componentName="The Boxer"
    height={40}
    iconSrc="assets/icons/spring-icon.png"
    isExpanded={false}
    menuItems={Array []}
    onExpandToggleCb={[Function]}
    opacity={0.85}
    width="100%"
  />
</Card>
`;

exports[`ConfigAccordion Should  . 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should . 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle . 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle c. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click . 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click event. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events whe. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events when the. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events when ther. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events when there . 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events when there are . 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events when there are 2 or m. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events when there are 2 or mor. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events when there are 2 or more c. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events when there are 2 or more conf. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events when there are 2 or more configs. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events when there. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click events when. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should handle click. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should match existing snapshot when given default props. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  />
</Accordion>
`;

exports[`ConfigAccordion Should match existing snapshot when given some configuration. 1`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;

exports[`ConfigAccordion Should match existing snapshot when given some configuration. 2`] = `
<Accordion>
  <Grid
    padded={true}
    stretched={true}
    style={Object {}}
  >
    <GridRow
      key="accordion-0"
      textAlign="left"
    >
      <Grid
        padded={true}
        relaxed={true}
        stretched={true}
        style={
          Object {
            "marginTop": "7px",
          }
        }
      >
        <div
          key="1"
        >
          Nitro
        </div>
        <div
          key="1"
        >
          Devil
        </div>
      </Grid>
    </GridRow>
  </Grid>
</Accordion>
`;
